# supplylink-logistics-system

./: .gitignore  Procfile  backend - Shortcut (2).lnk  backend - Shortcut.lnk  cleanup_admins.py  create_admin.py  folder_structure.py  frontend - Shortcut.lnk  pyproject.toml  requirements.txt  tatus  template.py
backend/: requirements.txt
backend/admin_backend/: dependencies.py  main.py
backend/admin_backend/controllers/: admin_auth_controller.py  admin_driver_controller.py  admin_shipment_controller.py
backend/admin_backend/schemas/: admin_auth_schema.py  admin_driver_schema.py  admin_shipment_schema.py
backend/admin_backend/services/: admin_auth_service.py  admin_driver_service.py  admin_shipment_service.py
backend/driver_backend/: main.py  test_voice.py  voice_test.html
backend/driver_backend/controllers/: driver_controller.py  pricing_controller.py  shipment_controller.py  voice_controller.py
backend/driver_backend/repositories/: driver_repository.py  shipment_repository.py  tracking_repository.py
backend/driver_backend/schemas/: driver_schemas.py  pricing_schemas.py  shipment_schemas.py  voice_schemas.py
backend/driver_backend/services/: driver_service.py  (+3 more)
backend/shared/: config.py  database.py  models.py  utils.py
backend/user_backend/: dependencies.py  main.py
frontend/driver/: dashboard.html  index.html  profile.html  register.html  shipment_details.html  shipments.html  test.html  test2.html  test_voice_front.html
frontend/user/: create_shipment.html  dashboard.html  index.html  login.html  profile.html  register.html  tracking.html
(+35 files in other folders)
