[project]
name = "logistic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles==23.2.1",
    "aiosmtplib==3.0.1",
    "alembic==1.13.0",
    "bcrypt==4.1.1",
    "celery==5.3.4",
    "email-validator==2.1.1",
    "fastapi==0.104.1",
    "googlemaps==4.10.0",
    "httpx==0.27.2",
    "numpy==1.26.4",
    "ollama==0.4.4",
    "pandas==2.1.3",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.0",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "python-socketio==5.10.0",
    "pyyaml==6.0.1",
    "redis==5.0.1",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "sqlalchemy==2.0.23",
    "twilio==8.10.0",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
]
[tool.poetry]
package-mode = false